# pretix-waitinglistsms

./: .gitignore  MANIFEST.in  README.rst  docs.html  pretixplugin.toml  pyproject.toml  setup.cfg
.github/: pretix.cfg
.github/workflows/: ci.yml  release.yml
knowledge/pretix-plugin-development/: README.md  auth.md  cookieconsent.md  customview.md  datasync.md  email.md  exporter.md  general.md  import.md  index.md  invoice.md  invoicetransmission.md  payment.md  placeholder.md  plugins.md  quality.md  shredder.md  ticketoutput.md
pretix_waitinglistsms/: __init__.py  apps.py  forms.py  message.py  signals.py  tasks.py  urls.py  views.py
pretix_waitinglistsms/templates/pretix_waitinglistsms/: settings.html
tests/: test_message.py  test_plugin.py
tools/: build_pretix_markdown_docs.py
